Add Xcode 3.0 changes

--- a/Info.plist
+++ b/Info.plist
@@ -18,6 +18,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
 	<key>NSPrincipalClass</key>
 	<string>MovieView</string>
 	<key>WebPluginDescription</key>
